# seznam

./: README.md  pyproject.toml
deliver/: dl.py  lstm.ipynb  sez_eda.ipynb  stop_words_cz.py  utils.py
