[tool.poetry]
name = "seznam"
version = "0.1.0"
description = ""
authors = ["eugene <kachalovsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
tqdm = "^4.62.3"
nltk = "^3.6.5"
scipy = "^1.7.3"
numpy = "^1.21.4"
pandas = "^1.3.5"
seaborn = "^0.11.2"
sklearn = "^0.0"
plotly = "^5.4.0"
statsmodels = "^0.13.1"
matplotlib = "^3.5.1"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
